[add] todo api example

--- a/qr-generator/src/main/resources/static/test.html
+++ b/qr-generator/src/main/resources/static/test.html
@@ -12,6 +12,9 @@
     header
 </div>
 
+<i class="fas fa-file-pdf mr-1" style="font-size: 14px;"></i>
+
+
 <div class="bg-gray-100 flex justify-center items-center min-h-screen">
     <div class="flex bg-white p-6 rounded-lg shadow-md w-[800px]">
 
